--- a/public/Stylesheet/APIEnsembl.css
+++ b/public/Stylesheet/APIEnsembl.css
@@ -69,6 +69,7 @@
     max-width: 100%;
     background-size: cover;
     position: absolute;
+    margin: 0;
     bottom: 0;
     left: 0;
     right: 0;
@@ -163,7 +164,25 @@
     border-bottom: 1px solid #D3D3D3;
   }
   
-  #inner_content_glob0 {
+  .inner_content_glob0,
+  .inner_content_glob0,
+  .inner_content_glob0,
+  .inner_content_glob0,
+  .inner_content_glob0,
+  .inner_content_glob0,
+  .inner_content_glob0,
+  .inner_content_glob0,
+  .inner_content_glob0,
+  .inner_content_glob0,
+  .inner_content_glob0,
+  .inner_content_glob0,
+  .inner_content_glob0,
+  .inner_content_glob11,
+  .inner_content_glob16,
+  .inner_content_glob17,
+  .inner_content_glob18,
+  .inner_content_glob19,
+  .inner_content_glob20 {
     background-color: #eeeeee;
     border-bottom: 1px solid #000000;
     overflow: hidden;
